LineMapColumn with wicketstuff-gmap3 support

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>wicketstuff-stateless</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.wicketstuff</groupId>
+			<artifactId>wicketstuff-gmap3</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-datetime</artifactId>
 		</dependency>
