Soluvas Web enhancements to support Spring Boot/Starter apps

--- a/site/pom.xml
+++ b/site/pom.xml
@@ -175,7 +175,8 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<scope>test</scope>
+			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
