--- a/login/pom.xml
+++ b/login/pom.xml
@@ -67,6 +67,13 @@
 			<artifactId>twitter4j-core</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.2.7.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.expressme</groupId>
