--- a/site/pom.xml
+++ b/site/pom.xml
@@ -110,6 +110,16 @@
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-extensions</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-auth-roles</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.2.7.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.emf</groupId>
