--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -49,14 +49,14 @@
 		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-core</artifactId>
-			<version>0.9.7</version>
+			<version>0.9.16</version>
 			<!-- won't be needed after wicket-webjars 0.4.4 / wicket-bootstrap 0.9.8 -->
-			<exclusions>
+			<!--<exclusions>
 				<exclusion>
 					<artifactId>javassist</artifactId>
 					<groupId>javassist</groupId>
 				</exclusion>
-			</exclusions>
+			</exclusions>-->
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
