--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -58,10 +58,10 @@
 				</exclusion>
 			</exclusions>-->
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>de.agilecoders.wicket</groupId>
 			<artifactId>wicket-bootstrap-extensions</artifactId>
