--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.soluvas</groupId>
 	<artifactId>org.soluvas.web.parent</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Soluvas Web Build</name>
 	<description>Soluvas Web Framework.</description>
@@ -53,8 +53,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     	
-		<wicket.version>6.22.0</wicket.version>
-		<wicketstuff.version>6.22.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
+		<wicket.version>7.2.0</wicket.version>
+		<wicketstuff.version>7.2.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
 		<wicket-atmosphere.version>0.25</wicket-atmosphere.version><!-- linked to wicket.version -->
 		<atmosphere.version>2.2.8</atmosphere.version><!-- somewhat linked to wicket-atmosphere.version, but there's also atmosphere-runtime-native -->
 	</properties>
@@ -85,7 +85,7 @@
 			<dependency>
 				<groupId>org.soluvas</groupId>
 				<artifactId>org.soluvas.parent</artifactId>
-				<version>2.2.0-SNAPSHOT</version>
+				<version>2.3.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -97,9 +97,9 @@
 			</dependency>
 
 			<dependency>
-				<groupId>com.vaynberg.wicket.select2</groupId>
-				<artifactId>wicket-select2</artifactId>
-				<version>2.3</version>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-select2</artifactId>
+				<version>7.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
@@ -107,7 +107,7 @@
 				<version>${wicket.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.wicket.experimental.wicket6</groupId>
+				<groupId>org.apache.wicket.experimental.wicket7</groupId>
 				<artifactId>wicket-atmosphere</artifactId>
 				<version>${wicket-atmosphere.version}</version>
 				<exclusions>
