--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,108 @@
 			    <version>1.0.4.Final</version>
 			   <scope>runtime</scope>
 			</dependency>
-			
+
+			<!-- Patternfly -->
+			<dependency>
+				<groupId>org.webjars.npm</groupId>
+				<artifactId>patternfly</artifactId>
+				<version>3.3.2</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>moment</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>eonasdan-bootstrap-datetimepicker</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>bootstrap</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>jquery</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>bootstrap-select</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>c3</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>google-code-prettify</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>datatables.net-colreorder</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>font-awesome</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>bootstrap-treeview</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>drmonty-datatables-colvis</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>bootstrap-switch</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>jquery-match-height</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId>
+				<artifactId>moment</artifactId>
+				<version>2.12.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId>
+				<artifactId>jquery-match-height</artifactId>
+				<version>0.7.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId>
+				<artifactId>eonasdan-bootstrap-datetimepicker</artifactId>
+				<version>4.15.35</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>moment</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>bootstrap</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>jquery</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.webjars.npm</groupId>
+				<artifactId>c3</artifactId>
+				<version>0.4.10</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.webjars.npm</groupId>
+						<artifactId>jsdom</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
