--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
 		<!-- http://stackoverflow.com/a/3018152 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<wicket.version>7.2.0</wicket.version>
+		<wicket.version>7.3.0</wicket.version>
 		<wicketstuff.version>7.2.0</wicketstuff.version><!-- used by wicketstuff e.g. wicket-datetime -->
-		<wicket-atmosphere.version>0.25</wicket-atmosphere.version><!-- linked to wicket.version -->
+		<wicket-atmosphere.version>0.26</wicket-atmosphere.version><!-- linked to wicket.version -->
 		<atmosphere.version>2.2.8</atmosphere.version><!-- somewhat linked to wicket-atmosphere.version, but there's also atmosphere-runtime-native -->
 	</properties>
 
@@ -98,7 +98,7 @@
 			<dependency>
 				<groupId>org.wicketstuff</groupId>
 				<artifactId>wicketstuff-select2</artifactId>
-				<version>7.2.0</version>
+				<version>${wicketstuff.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
