--- a/pom.xml
+++ b/pom.xml
@@ -213,18 +213,18 @@
 			<dependency>
 				<groupId>org.ocpsoft.rewrite</groupId>
 				<artifactId>rewrite-servlet</artifactId>
-				<version>2.0.12.Final</version>
+					<version>3.4.1.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.ocpsoft.rewrite</groupId>
 				<artifactId>rewrite-integration-spring</artifactId>
-				<version>2.0.12.Final</version>
-				<scope>runtime</scope>
+				<version>3.4.1.Final</version>
+ 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.ocpsoft.logging</groupId>
 				<artifactId>logging-adapter-slf4j</artifactId>
-				<version>1.0.4.Final</version>
+				<version>1.0.5.Final</version>
 				<scope>runtime</scope>
 			</dependency>
 
@@ -416,6 +416,15 @@
 			<id>typesafe</id>
 			<name>Typesafe Repository</name>
 			<url>http://repo.typesafe.com/typesafe/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<!-- FIXME: Workaround until tomorrow: https://github.com/ocpsoft/rewrite/issues/241 -->
+			<id>orgocpsoft-1058</id>
+			<name>orgocpsoft-1058</name>
+			<url>https://oss.sonatype.org/content/repositories/orgocpsoft-1058</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
