--- a/site/pom.xml
+++ b/site/pom.xml
@@ -132,8 +132,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-core</artifactId>
-			<version>4.0.4.RELEASE</version>
+			<artifactId>spring-security-web</artifactId>
+			<version>4.2.3.RELEASE</version>
 			<optional>true</optional>
 		</dependency>
 
