--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.geo</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
