--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -34,6 +34,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
+			<artifactId>org.soluvas.image</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.soluvas</groupId>
 			<artifactId>org.soluvas.geo</artifactId>
 			<optional>true</optional>
 		</dependency>
