--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ branches:
   - 2.3.x
   - 2.2.x
   - develop
+  - feature
 language: java
 jdk: oraclejdk8
 # https://coderwall.com/p/9b_lfq/deploying-maven-artifacts-from-travis
