--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,7 @@
 			<dependency>
 				<groupId>org.soluvas</groupId>
 				<artifactId>org.soluvas.parent</artifactId>
-<<<<<<< HEAD
-				<version>2.3.0-CASHBACK-SNAPSHOT</version>
-=======
-				<version>2.3.0-POINT-SNAPSHOT</version>
->>>>>>> refs/remotes/origin/point
+				<version>2.3.0-DEVELOP-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
